Fixing the issues with the body overflow: auto property by removing it and placing overflow properties on the children instead

--- a/stylesheets/aside-structure.css
+++ b/stylesheets/aside-structure.css
@@ -1,23 +1,43 @@
 aside{
-    --aside-top-row: 10rem;
-    /* --aside-middle-row: 42rem; */
-    --aside-bottom-row: 62rem;
+    /* Contribute towards height */
+    --aside-first-li-height: 8rem; /* 8rem */
+    --aside-li-height: 5rem; /* 9 * 5rem = 45rem + 8 = 53rem */ 
+    --aside-ul-row-gap: 1rem; /* 1rem * 7 60rem */
+    --aside-nav-row-gap: 5rem; /* 5rem * 2 */
+    
+    --aside-font-size: 1.8rem;
+    --aside-font-weight: 550;
 
-    --aside-structure-rows: var(--aside-top-row) 
-                            /* var(--aside-middle-row) */
-                            var(--aside-bottom-row);
+    --aside-padding: 4rem 1rem;
+    --aside-column-gap: 1rem;
+}
 
-                            
-    --aside-margin-left: 2rem;
-    --aside-margin-top-bottom: 3rem;
-    --aside-column-gap: 4rem;
+aside{
+    font-size: var(--aside-font-size);
+    font-family: sans-serif;
+    font-weight: var(--aside-font-weight);
 
-    --aside-ul-row-gap: 2rem;
-    --aside-nav-row-gap: 8rem;
+    background-color: #0078D4;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    display: flex;
+
+    height: 100dvh;
+    width: 30rem;
+    padding: var(--aside-padding);
+    overflow-y: auto;
 }
 
 aside ul{
     list-style-type: none;
+
+    display: flex;
+    flex-direction: column;
+
+    row-gap: var(--aside-ul-row-gap);
 }
 
 aside a{
@@ -25,76 +45,87 @@ aside a{
 }
 
 aside a:link,
-aside a:visited{
-    color: black;
+aside a:visited,
+aside p{
+    color: white;
 }
 
 aside nav{
-    display: grid;
-    grid-template-rows: var(--aside-structure-rows);
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: max-content;
 
     row-gap: var(--aside-nav-row-gap);
-
-    margin: var(--aside-margin-top-bottom) 0;
-}
-
-
-
-
-
-
-
-aside nav > *{
-    display: flex;
-}
-
-aside nav > label{
-    align-items: center;
-
-    column-gap: var(--aside-column-gap);
-}
-
-aside nav ul{
-    flex-direction: column;
-    justify-content: center;
-
-    row-gap: var(--aside-ul-row-gap);
 }
 
 aside nav ul li{
-    height: 5.3rem;
-}
+    height: var(--aside-li-height);
 
-aside nav ul li:nth-of-type(6){
-    margin-bottom: 5rem;
-}
-
-aside nav ul li,
-aside nav ul li a,
-aside nav ul li label{
     display: flex;
 
-    width: 100%;
+    border-radius: .4rem;
+
+    overflow: hidden;
+
+    transition: background-color 300ms linear;
 }
 
-aside nav ul li,
-aside nav ul li a,
-aside nav label{
+aside nav ul:first-of-type li{
+    height: var(--aside-first-li-height);
+}
+
+aside nav ul *:has(> svg){
+    display: flex;
+    align-items: center;
+
     column-gap: var(--aside-column-gap);
+
+    overflow: hidden;
 }
 
-aside nav ul li p{
-    margin: auto 0;
+aside li:hover{
+    background-color: rgba(206, 206, 206, 0.4);
 }
+
+aside li:active{
+    background-color: rgba(255, 255, 255, 0.4);
+    transition: none;
+}
+
+aside li,
+aside li label{
+    cursor: pointer;
+}
+
+aside svg{
+    margin-left: var(--aside-column-gap);
+}
+
+
+
+
+
 
 aside nav input{
     display: none;
 }
 
-aside nav svg{
-    margin-left: var(--aside-margin-left);
-}
 
-aside nav:has(input:checked){
-    background-color: brown;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
